feat: Se agrega funcionalidad de adición y reducción con carga de cdp y rp alternativa. #11

--- a/src/app/pages/gestion-vinculaciones/modal-adiciones/modal-adiciones.component.scss
+++ b/src/app/pages/gestion-vinculaciones/modal-adiciones/modal-adiciones.component.scss
@@ -1,1 +1,1 @@
-@import '../../form-detalle-resolucion/form-detalle-resolucion.component.scss';
+@import '../modal-reducciones/modal-reducciones.component.scss';
