--- a/src/app/pages/gestion-vinculaciones/modal-reducciones/modal-reducciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/modal-reducciones/modal-reducciones.component.html
@@ -1,41 +1,41 @@
-<form #rform="ngForm">
+<form #rform="ngForm" novalidate class="centrado">
     <h2 class="section-title">Reducción de horas</h2>
-    <mat-grid-list cols="2">
+    <mat-grid-list cols="2" rowHeight="300px">
         <mat-grid-tile>
-            <mat-form-field style="width: 100%">
+            <mat-form-field class="form-field-modal">
                 <mat-label>Horas actuales</mat-label>
-                <input matInput type="text" [(ngModel)]="informacion.NumeroHorasSemanales" disabled>
+                <input matInput type="text" name="horasAct" #horasAct="ngModel" [(ngModel)]="cambioVinculacion.VinculacionOriginal.NumeroHorasSemanales" disabled>
             </mat-form-field>
-            <mat-form-field style="width: 100%">
-                <mat-label>Horas a adicionar</mat-label>
-                <input matInput type="tel" [(ngModel)]="horasReducir" (change)="sumarHoras()">
+            <mat-form-field class="form-field-modal">
+                <mat-label>Horas a reducir</mat-label>
+                <input matInput type="number" name="horasRed" #horasRed="ngModel" [(ngModel)]="cambioVinculacion.NumeroHorasSemanales" (change)="sumarHoras()" required>
             </mat-form-field>
-            <mat-form-field style="width: 100%">
+            <mat-form-field class="form-field-modal">
                 <mat-label>Horas totales</mat-label>
-                <input matInput type="text" [(ngModel)]="horasTotales" disabled>
+                <input matInput type="text" name="horasTot" #horasTot="ngModel" [(ngModel)]="horasTotales" disabled>
             </mat-form-field>
-            <mat-form-field style="width: 100%">
+            <mat-form-field class="form-field-modal">
                 <mat-label>Registro presupuestal</mat-label>
-                <mat-select [(ngModel)]="rpSeleccionado">
+                <mat-select [(ngModel)]="cambioVinculacion.DocPresupuestal" name="rp" #rp="ngModel" required>
                     <mat-option>--Seleccionar--</mat-option>
-                    <mat-option *ngFor="let rp of registrosPresupuestales" [value]="rp.Id">
-                        {{ rp.Nombre }}
+                    <mat-option *ngFor="let rp of registrosPresupuestales" [value]="rp">
+                        Registro presupuestal {{rp.Consecutivo}} - {{ rp.Vigencia }}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
         </mat-grid-tile>
         <mat-grid-tile>
-            <mat-form-field style="width: 100%">
+            <mat-form-field class="form-field-modal">
                 <mat-label>Semanas actuales</mat-label>
-                <input matInput type="text" [(ngModel)]="informacion.NumeroSemanas" disabled>
+                <input matInput type="text" name="semanas" #semanas="ngModel" [(ngModel)]="cambioVinculacion.VinculacionOriginal.NumeroSemanas" disabled>
             </mat-form-field>
-            <mat-form-field style="width: 100%">
+            <mat-form-field class="form-field-modal">
                 <mat-label>Semanas a reducir</mat-label>
-                <input matInput type="text" [(ngModel)]="semanasReducir" >
+                <input matInput type="text" name="semanasRed" #semanasRed="ngModel" [(ngModel)]="cambioVinculacion.NumeroSemanas" required >
             </mat-form-field>
-            <mat-form-field style="width: 100%">
+            <mat-form-field class="form-field-modal">
                 <mat-label>Fecha de inicio válida</mat-label>
-                <input matInput type="date" [(ngModel)]="fechaInicio" >
+                <input matInput type="date" name="fechaInit" #fechaInit="ngModel" [(ngModel)]="cambioVinculacion.FechaInicio" required >
             </mat-form-field>
         </mat-grid-tile>
     </mat-grid-list>
