--- a/src/app/pages/gestion-vinculaciones/modal-reducciones/modal-reducciones.component.scss
+++ b/src/app/pages/gestion-vinculaciones/modal-reducciones/modal-reducciones.component.scss
@@ -1,1 +1,10 @@
 @import '../../form-detalle-resolucion/form-detalle-resolucion.component.scss';
+
+.form-field-modal {
+    width: 98%;
+    padding: 0 1%;
+}
+
+.centrado {
+    text-align: center;
+}
