--- a/src/app/pages/gestion-vinculaciones/modal-disponibilidad/modal-disponibilidad.component.html
+++ b/src/app/pages/gestion-vinculaciones/modal-disponibilidad/modal-disponibilidad.component.html
@@ -10,4 +10,4 @@
     <app-tablas-disponibilidades [vigencia]="vigencia" (seleccion)="seleccionado($event, i)"></app-tablas-disponibilidades>
 </ng-container>
 <button mat-button class="button button-add" type="button" (click)="agregarTablas()" >Agregar otra disponibilidad</button>
-<button mat-button class="button button-submit" type="submit" (click)="vincular()" [disabled]="disponibilidades.length > 0" >Vincular docentes</button>
+<button mat-button class="button button-submit" type="submit" (click)="vincular()" [disabled]="disponibilidades.length === 0" >Vincular docentes</button>
