--- a/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.html
+++ b/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.html
@@ -77,7 +77,7 @@
                         Indique la consideración de la resolución
                     </mat-error>
                 </mat-form-field>
-                <button mat-button class="button button-add" type="button" (click)="generarVistaPrevia()">Vista previa de la resolución</button>
+                <button mat-button class="button button-add" type="button" (click)="generarVistaPrevia()" [disabled]="!fform.valid">Vista previa de la resolución</button>
             </div>
         </mat-grid-tile>
         <mat-grid-tile>
