--- a/src/app/pages/gestion-vinculaciones/cancelar-vinculaciones/cancelar-vinculaciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/cancelar-vinculaciones/cancelar-vinculaciones.component.html
@@ -15,15 +15,34 @@
                 (userRowSelect)="seleccionarVinculaciones($event)"
             ></ng2-smart-table>
         </fieldset>
-        <fieldset class="form-container" *ngIf="vinculacionesSeleccionadas.length > 0">
+        <fieldset class="form-container" *ngIf="cambioVinculacion.length > 0">
             <legend>
                 <h3>Docentes Seleccionados Para Reversar</h3>
             </legend>
-            <mat-expansion-panel *ngFor="let v of vinculacionesSeleccionadas; let i=index">
-                <mat-expansion-panel-header>
-                    <mat-panel-title><strong>{{i + 1}}. {{v.PersonaId}} - {{v.Nombre}} - {{v.NumeroHorasSemanales}} Horas semanales</strong></mat-panel-title>
-                </mat-expansion-panel-header>
-            </mat-expansion-panel>
+            <form #cform="ngForm" novalidate>
+                <mat-form-field class="form-field-column">
+                    <mat-label>Numero de semanas a reversar:</mat-label>
+                    <input matInput type="number" min="0" [(ngModel)]="numeroSemanas" name="semanas" #semanas="ngModel" required >
+                </mat-form-field>
+                <mat-expansion-panel *ngFor="let v of cambioVinculacion; let i=index" hideToggle disabled>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title class="cancelacion-panel">
+                            <strong>{{i + 1}}. {{v.VinculacionOriginal.PersonaId}} - {{v.VinculacionOriginal.Nombre}} - {{v.VinculacionOriginal.NumeroHorasSemanales}} Horas semanales</strong>
+                            <mat-form-field class="form-field-exp">
+                                <mat-label>Registro presupuestal</mat-label>
+                                <mat-select [(ngModel)]="v.DocPresupuestal" name="rp_{{i}}" #rp_{{i}}="ngModel" >
+                                    <mat-option>--Seleccionar--</mat-option>
+                                    <mat-option  *ngFor="let rp of registrosPresupuestales[v.VinculacionOriginal.PersonaId]" [value]="rp">
+                                        Registro presupuestal {{rp.Consecutivo}} - {{ rp.Vigencia }}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </mat-panel-title>
+                    </mat-expansion-panel-header>
+                </mat-expansion-panel>
+                <button mat-button class="button button-submit" type="submit" (click)="cancelarVinculaciones()" [disabled]="!cform.valid">Cancelar vinculaciones</button>
+            </form>
         </fieldset>
+        <button mat-button class="button button-remove" type="button" (click)="salir()">Salir</button>
     </mat-card-content>
 </mat-card>
