--- a/src/app/pages/admin-resoluciones/admin-resoluciones.component.html
+++ b/src/app/pages/admin-resoluciones/admin-resoluciones.component.html
@@ -26,6 +26,8 @@
         </mat-form-field>
         <button mat-button class="button button-add" type="button" (click)="filtroTabla()"
             style="width: 7%;">Filtrar</button>
+        <button mat-button class="button button-add boton" type="button" (click)="limpiarFiltro()"
+            style="width: 7%;">lim</button>
         <ng2-smart-table [settings]="adminResolucionesSettings" [source]="adminResolucionesData"
             (custom)=eventHandler($event)></ng2-smart-table>
     </mat-card-content>
