--- a/src/app/pages/admin-resoluciones/expedir-cancelacion/expedir-cancelacion.component.html
+++ b/src/app/pages/admin-resoluciones/expedir-cancelacion/expedir-cancelacion.component.html
@@ -6,8 +6,8 @@
                     <h2>Información de Cancelación</h2>
                 </div>
                 <h2 class="section-title">Docentes a vincular</h2>
-                <ng2-smart-table [settings]="adminCancelacionsettings" [source]="adminCancelacionData"
-                    (custom)=eventHandler($event)></ng2-smart-table>
+                <!-- <ng2-smart-table [settings]="adminCancelacionsettings" [source]="adminCancelacionData"
+                    (custom)=eventHandler($event)></ng2-smart-table> -->
             </div>
             <div class="section">
                 <h2 class="section-title">Datos de la cancelación de la(s) vinculación(es)</h2>
