fix: Se corrige carga de resoluciones personalizando el ServerdatSource. #10

--- a/src/app/pages/gestion-resoluciones/consulta-docente/consulta-docente.component.html
+++ b/src/app/pages/gestion-resoluciones/consulta-docente/consulta-docente.component.html
@@ -14,7 +14,7 @@
         <ng2-smart-table
             [settings]="resolucionesDocenteSettings"
             [source]="resolucionesDocenteData"
-            (custom)=eventHandler($event)
+            (custom)="eventHandler($event)"
         ></ng2-smart-table>
         <button mat-button class="button button-remove" type="button" (click)="volver()">Volver</button>
     </mat-card-content>
