--- a/src/app/pages/admin-resoluciones/expedir-vinculacion/expedir-vinculacion.component.html
+++ b/src/app/pages/admin-resoluciones/expedir-vinculacion/expedir-vinculacion.component.html
@@ -12,23 +12,23 @@
                 </mat-form-field>
                 <mat-form-field class="form-field-column">
                     <mat-label>Forma de pago</mat-label>
-                    <input matInput type="number" name="formaPago" [(ngModel)]="vigencia" disabled>
+                    <input matInput type="number" name="formaPago" [(ngModel)]="formaPago" disabled>
                 </mat-form-field>
                 <mat-form-field style="width: 100%">
                     <mat-label>Sede solicitante</mat-label>
-                    <input matInput type="text" name="sedeSol" [(ngModel)]="vigencia" disabled>
+                    <input matInput type="text" name="sedeSol" [(ngModel)]="sedeSol" disabled>
                 </mat-form-field>
             </div>
             <div class="section">
                 <h2 class="section-title">Justificación y observaciones</h2>
                 <mat-form-field style="width: 100%">
                     <mat-label>Justificación</mat-label>
-                    <textarea matInput cols="20" rows="5" name="justificacion" [(ngModel)]="vigencia"
+                    <textarea matInput cols="20" rows="5" name="justificacion" [(ngModel)]="justificacion"
                         required></textarea>
                 </mat-form-field>
                 <mat-form-field style="width: 100%">
                     <mat-label>observaciones</mat-label>
-                    <textarea matInput cols="20" rows="5" name="observaciones" [(ngModel)]="vigencia"
+                    <textarea matInput cols="20" rows="5" name="observaciones" [(ngModel)]="observaciones"
                         required></textarea>
                 </mat-form-field>
             </div>
@@ -42,7 +42,7 @@
                 </mat-form-field>
                 <mat-form-field style="width: 100%">
                     <mat-label>Descripción</mat-label>
-                    <textarea matInput cols="20" rows="5" name="descripcion" [(ngModel)]="vigencia" required></textarea>
+                    <textarea matInput cols="20" rows="5" name="descripcion" [(ngModel)]="descripcion" required></textarea>
                 </mat-form-field>
             </div>
             <div class="section">
@@ -55,17 +55,17 @@
                 </mat-form-field>
                 <mat-form-field class="form-field-column">
                     <mat-label>Número de resolución</mat-label>
-                    <input matInput type="number" name="numRes" [(ngModel)]="vigencia" disabled>
+                    <input matInput type="number" name="numRes" [(ngModel)]="numRes" disabled>
                 </mat-form-field>
                 <mat-form-field class="form-field-column">
                     <mat-label>Tipo de resolución</mat-label>
-                    <input matInput type="number" name="tipoRes" [(ngModel)]="vigencia" disabled>
+                    <input matInput type="number" name="tipoRes" [(ngModel)]="tipoRes" disabled>
                 </mat-form-field>
                 <mat-form-field class="form-field-column">
                     <mat-label>Número de semanas</mat-label>
-                    <input matInput type="number" name="numSem" [(ngModel)]="vigencia" disabled>
+                    <input matInput type="number" name="numSem" [(ngModel)]="numSemanas" disabled>
                 </mat-form-field>
-                <button mat-button class="button button-submit" type="button" (click)="olanda()">Realizar
+                <button mat-button class="button button-submit" type="button" (click)="realizarContrato()">Realizar
                     expedición de la resolución</button>
                 <button mat-button class="button button-remove" type="button" (click)="cancelarExpedicion()">Cancelar</button>
             </div>
