feat: Se hace revisión de los procesos de expedición en el cliente. #36

--- a/src/app/pages/aprobacion-resoluciones/aprobacion-resoluciones.component.html
+++ b/src/app/pages/aprobacion-resoluciones/aprobacion-resoluciones.component.html
@@ -1,5 +1,5 @@
 <mat-card class="card-oas">
-    <mat-card-title class="resoluciones-title">
+    <mat-card-title class="aprobaciones-title">
         <h1>Aprobación de resoluciones</h1>
     </mat-card-title>
     <mat-card-content>
