--- a/src/app/pages/admin-resoluciones/admin-resoluciones.component.html
+++ b/src/app/pages/admin-resoluciones/admin-resoluciones.component.html
@@ -1,5 +1,5 @@
 <mat-card class="card-oas">
-    <mat-card-title class="resoluciones-title">
+    <mat-card-title class="admin-title">
         <h1>Administración de resoluciones</h1>
     </mat-card-title>
     <mat-card-content>
