--- a/src/app/pages/admin-resoluciones/expedir-cancelacion/expedir-cancelacion.component.html
+++ b/src/app/pages/admin-resoluciones/expedir-cancelacion/expedir-cancelacion.component.html
@@ -1,47 +1,42 @@
 <form #fform="ngForm" novalidate>
-    <mat-grid-list cols="1">
-        <mat-grid-tile>
-            <div class="section">
-                <div class="adminVinc-title">
-                    <h2>Información de Cancelación</h2>
-                </div>
-                <h2 class="section-title">Docentes a vincular</h2>
-                <ng2-smart-table [settings]="adminCancelacionsettings" [source]="adminCancelacionData">
-                </ng2-smart-table>
-            </div>
-            <div class="section">
-                <h2 class="section-title">Datos de la cancelación de la(s) vinculación(es)</h2>
-                <mat-form-field style="width: 100%">
-                    <mat-label>Justificación</mat-label>
-                    <textarea matInput cols="20" rows="5" name="justificacion"
-                        [(ngModel)]="contratoCanceladoBase.MotivoCancelacion" required></textarea>
-                </mat-form-field>
-            </div>
-            <div class="section">
-                <h2 class="section-title">Datos de expedición</h2>
-                <mat-form-field class="form-field-column">
-                    <mat-label>Fecha de expedición válida</mat-label>
-                    <input matInput [matDatepicker]="picker" [(ngModel)]="FechaExpedicion">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                </mat-form-field>
-                <mat-form-field class="form-field-column">
-                    <mat-label>Número de resolución</mat-label>
-                    <input matInput type="number" name="numRes" [(ngModel)]="numeroRes" disabled>
-                </mat-form-field>
-                <mat-form-field class="form-field-column">
-                    <mat-label>Tipo de resolución</mat-label>
-                    <input matInput type="text" name="tipoRes" [(ngModel)]="tipoResolucion" disabled>
-                </mat-form-field>
-                <mat-form-field class="form-field-column">
-                    <mat-label>Número de semanas</mat-label>
-                    <input matInput type="number" name="numSem" [(ngModel)]="maximoSemanas" disabled>
-                </mat-form-field>
-                <button mat-button class="button button-submit" type="button" (click)="cancelarContrato()">Realizar
-                    expedición de la resolución</button>
-                <button mat-button class="button button-remove" type="button"
-                    (click)="cancelarExpedicion()">Cancelar</button>
-            </div>
-        </mat-grid-tile>
-    </mat-grid-list>
+    <div class="section">
+        <div class="adminVinc-title">
+            <h2>Información de Cancelación</h2>
+        </div>
+        <h2 class="section-title">Docentes a vincular</h2>
+        <ng2-smart-table [settings]="adminCancelacionsettings" [source]="adminCancelacionData">
+        </ng2-smart-table>
+    </div>
+    <div class="section">
+        <h2 class="section-title">Datos de la cancelación de la(s) vinculación(es)</h2>
+        <mat-form-field style="width: 100%">
+            <mat-label>Justificación</mat-label>
+            <textarea matInput cols="20" rows="5" name="justificacion"
+                [(ngModel)]="contratoCanceladoBase.MotivoCancelacion" required></textarea>
+        </mat-form-field>
+    </div>
+    <div class="section">
+        <h2 class="section-title">Datos de expedición</h2>
+        <mat-form-field class="form-field-column">
+            <mat-label>Fecha de expedición válida</mat-label>
+            <input matInput [matDatepicker]="picker" [(ngModel)]="resolucionActual.FechaExpedicion">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field class="form-field-column">
+            <mat-label>Número de resolución</mat-label>
+            <input matInput type="number" name="numRes" [(ngModel)]="resolucion.NumeroResolucion" disabled>
+        </mat-form-field>
+        <mat-form-field class="form-field-column">
+            <mat-label>Tipo de resolución</mat-label>
+            <input matInput type="text" name="tipoRes" [(ngModel)]="resolucion.TipoResolucion" disabled>
+        </mat-form-field>
+        <mat-form-field class="form-field-column">
+            <mat-label>Número de semanas</mat-label>
+            <input matInput type="number" name="numSem" [(ngModel)]="resolucion.Semanas" disabled>
+        </mat-form-field>
+        <button mat-button class="button button-submit" type="button" (click)="cancelarContrato()">Realizar
+            expedición de la resolución</button>
+        <button mat-button class="button button-remove" type="button" (click)="cancelarExpedicion()">Cancelar</button>
+    </div>
 </form>
