--- a/src/app/@core/components/actions-assistance/actions-assistance.component.html
+++ b/src/app/@core/components/actions-assistance/actions-assistance.component.html
@@ -27,7 +27,7 @@
         (click)="iconoSelect('reducir')">remove_circle</em>
 
     <em class="material-icons icon" title="Consultar" name="consultar"
-        *ngIf="this.modulo === 'gestion' && (rowData.Estado === 'Solicitada' || rowData.Estado === 'Rechazada')"
+        *ngIf="this.modulo === 'gestion' && !rowData.TipoResolucion.includes('Vinculación') && (rowData.Estado === 'Solicitada' || rowData.Estado === 'Rechazada')"
         (click)="iconoSelect('consultar')">list</em>
 
     <em class="material-icons icon" title="Enviar a revisión" name="enviar"
