--- a/src/app/pages/admin-resoluciones/expedir-cancelacion/expedir-cancelacion.component.html
+++ b/src/app/pages/admin-resoluciones/expedir-cancelacion/expedir-cancelacion.component.html
@@ -19,7 +19,7 @@
         <h2 class="section-title">Datos de expedición</h2>
         <mat-form-field class="form-field-column">
             <mat-label>Fecha de expedición válida</mat-label>
-            <input matInput [matDatepicker]="picker" [(ngModel)]="resolucionActual.FechaExpedicion">
+            <input matInput [matDatepicker]="picker" name="fechaExp" [(ngModel)]="resolucionActual.FechaExpedicion">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
