feat: Se aplican correcciones segun observaciones de pruebas de carga y seguridad. #41

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -52,4 +52,10 @@
     .ng2-smart-page-item a:hover {
         text-decoration: none !important;
     }
+
+    .ng2-smart-filters {
+        input.form-control {
+            color: black !important;
+        }
+    }
 }
