feat: Configuracion de filtros de busqueda en ng2-smart-table para uso con ServerDataSource. Se retiran los formularios de los filtros manuales. udistrital/resoluciones_mid_v2#46

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -55,6 +55,7 @@
 
     .ng2-smart-filters {
         input.form-control {
+            text-align: center;
             color: black !important;
         }
     }
