feat: Filtro por facultar que se activa con switch disponible unicamente si se conoce la dependencia del usuario. #64

--- a/src/app/pages/aprobacion-resoluciones/aprobacion-resoluciones.component.html
+++ b/src/app/pages/aprobacion-resoluciones/aprobacion-resoluciones.component.html
@@ -3,6 +3,14 @@
         <h1>Aprobación de resoluciones</h1>
     </mat-card-title>
     <mat-card-content>
+        <div class="toggler">
+            <mat-slide-toggle 
+                [(ngModel)]="filtrarFacultad"
+                labelPosition="before"
+                [disabled]="dependenciaUsuario == 0"
+                (change)="ngOnInit()"
+            >Filtrar según mi facultad:</mat-slide-toggle>
+        </div>
         <ng2-smart-table [settings]="aprobResolucionesSettings" [source]="aprobResolucionesData"></ng2-smart-table>
     </mat-card-content>
 </mat-card>
