--- a/src/app/pages/gestion-resoluciones/gestion-resoluciones.component.html
+++ b/src/app/pages/gestion-resoluciones/gestion-resoluciones.component.html
@@ -3,6 +3,14 @@
         <h1>Gestión de resoluciones</h1>
     </mat-card-title>
     <mat-card-content>
+        <div class="toggler">
+            <mat-slide-toggle 
+                [(ngModel)]="filtrarFacultad"
+                labelPosition="before"
+                [disabled]="dependenciaUsuario == 0"
+                (change)="ngOnInit()"
+            >Filtrar según mi facultad:</mat-slide-toggle>
+        </div>
         <ng2-smart-table [settings]="resolucionesSettings" [source]="resolucionesData">
         </ng2-smart-table>
     </mat-card-content>
