--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,6 +108,21 @@ mat-label {
   }
 }
 
+.mat-slide-toggle.mat-checked {
+  .mat-slide-toggle-bar {
+    background-color: var(--color3);
+    .mat-slide-toggle-thumb, .mat-slide-toggle-ripple.mat-ripple-element {
+      background-color: var(--primary);
+    }
+  }
+}
+
+.toggler {
+  margin: 1em;
+  text-align: right;
+  color: var(--primary);
+}
+
 .mat-card-content {
   text-align: center;
 }
