feat: se genera cuadro de bienvenida en ventana de inicio. #72

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<div class=vacio></div>
+<mat-card class="welcome-card">
+    <mat-card-title class="welcome-title">
+        <h1>BIENVENIDO A LA NUEVA VERSIÓN DEL MÓDULO DE RESOLUCIONES</h1>
+    </mat-card-title>
+    <mat-card-content class="welcome-content">
+        Se han implementado nuevas funcionalidades para el sistema y se ha optimizado su funcionamiento.
+    </mat-card-content>
+</mat-card>
