feat: estilos responsive y lint errors. #73

--- a/src/app/@core/components/actions-assistance/actions-assistance.component.scss
+++ b/src/app/@core/components/actions-assistance/actions-assistance.component.scss
@@ -7,3 +7,15 @@
     display: flex;
     justify-content: space-around;
 }
+
+@media screen and (max-width: 1024px) {
+    .icon {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .acciones {
+        flex-wrap: wrap;
+    }
+}
