--- a/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.html
+++ b/src/app/pages/form-detalle-resolucion/form-detalle-resolucion.component.html
@@ -1,5 +1,5 @@
 <form #fform="ngForm" novalidate >
-    <mat-grid-list cols="2">
+    <mat-grid-list [appOasGridCols]="{xs: 1, sm: 1, md: 1, lg: 2, xl: 2}" rowHeight="45rem">
         <mat-grid-tile>
             <div class="section">
                 <h2 class="section-title">Formato de la Resolución</h2>
