--- a/src/app/pages/gestion-vinculaciones/modal-adiciones/modal-adiciones.component.html
+++ b/src/app/pages/gestion-vinculaciones/modal-adiciones/modal-adiciones.component.html
@@ -26,12 +26,12 @@
             </mat-form-field>
             <mat-form-field class="form-field-modal">
                 <mat-label>Semanas a adicionar</mat-label>
-                <input matInput type="text" name="semanasAdd" #semanasAdd="ngModel" [(ngModel)]="cambioVinculacion.NumeroSemanas" required>
+                <input matInput type="text" name="semanasAdd" #semanasAdd="ngModel" [(ngModel)]="cambioVinculacion.NumeroSemanas" required disabled>
             </mat-form-field>
             <mat-form-field class="form-field-modal">
                 <mat-label>fecha de inicio válida</mat-label>
                 <mat-datepicker #fechaPicker ></mat-datepicker>
-                <input matInput [matDatepicker]="fechaPicker" name="fechaInit" #fechaInit="ngModel" [(ngModel)]="cambioVinculacion.FechaInicio" required>
+                <input matInput [matDatepicker]="fechaPicker" name="fechaInit" #fechaInit="ngModel" [(ngModel)]="cambioVinculacion.FechaInicio" (dateInput)="calcularSemanas()" required>
                 <mat-datepicker-toggle matSuffix [for]="fechaPicker"></mat-datepicker-toggle>
             </mat-form-field>
             <button mat-button class="button button-add" type="button" (click)="mostrarDisponibilidad()">Cambiar disponibilidad</button>
