--- a/src/app/pages/gestion-vinculaciones/vincular-docentes/vincular-docentes.component.html
+++ b/src/app/pages/gestion-vinculaciones/vincular-docentes/vincular-docentes.component.html
@@ -1,8 +1,8 @@
 <mat-card class="card-oas">
     <mat-card-title class="vinculacion-title">
         <h1>Vinculacion de docentes</h1>
-        <h2>Resolución # {{ resolucion.NumeroResolucion }}</h2>
-        <h2>{{ resolucionVinculacion.Dedicacion }}</h2>
+        <h2>{{ tipoResolucion.Nombre }} # {{ resolucion.NumeroResolucion }}</h2>
+        <h2>{{ resolucionVinculacion.Dedicacion }} - {{ resolucionVinculacion.NivelAcademico }}</h2>
     </mat-card-title>
     <mat-card-content>
         <fieldset class="form-container">
